pari/static/css/tinymce.css
img {
    margin: 10px;
}

.image-container {
    position: relative;
    display: table;
    margin: 10px;
    width: auto;
}

.image-container img {
    margin: 0;
}

.image-container:after {
    height: auto;
    width: auto;
    display: table-caption;
    padding: 2%;
    background: rgba(242, 242, 242, 0.80);
    content: attr(data-label);
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    caption-side: bottom;
    font-family: "Open Sans", sans-serif;
    font-size: 15px;
}

.article-title {
    font-family: 'Merriweather', serif;
    font-size: 48px;
    line-height: 120%;
}

.mce-content-body {
    font-family: "Open Sans", sans-serif;
    font-size: 17px;
    line-height: 28px;
}

.dropcaps {
    font-size: 150%;
}

.content-container ul {
    padding: 12px;
    margin: 12px;
}

